modified to work

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,13 +1,33 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>auth</ion-title>
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">auth</ion-title>
+      <ion-title size="large">Login</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Login Form</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-input type="email" label="Email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input type="password" label="Password"></ion-input>
+      </ion-item>
+
+      <div class="button-container">
+        <ion-button expand="full" color="primary" [routerLink]="['/places']">
+          Login
+        </ion-button>
+      </div>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
