--- a/src/app/offers/offers.page.html
+++ b/src/app/offers/offers.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title>Offers</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,4 +10,8 @@
       <ion-title size="large">offers</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-button expand="full">Package 1</ion-button>
+  <ion-button expand="full">Package 2</ion-button>
+  <ion-button expand="full">Package 3</ion-button>
 </ion-content>
