--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -1,13 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>places</ion-title>
+    <ion-title>Places</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">places</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-content
+      ><ion-img
+        src="https://miro.medium.com/v2/resize:fit:1200/0*QNkzFqnKdlZGsX7s.jpg"
+        alt="Image"
+      ></ion-img>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-list>
+    <ion-item *ngFor="let place of places">
+      <ion-label>{{ place }}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
