--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,13 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>tabs</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="places" href="/tabs/places">
+      <ion-icon name="airplane"></ion-icon>
+      <ion-label>Places</ion-label>
+    </ion-tab-button>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tabs</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+    <ion-tab-button tab="offers" href="/tabs/offers">
+      <ion-icon name="briefcase"></ion-icon>
+      <ion-label>Offers</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
